# Add a contextMenu for "All files" module. On Folder, you can expand (or collapse), and on Files, you can "Edit in new tab" and open the same file in EN (or LANG) # Fix a small i18n issue (Repository string)

--- a/themes/style.css
+++ b/themes/style.css
@@ -255,6 +255,10 @@ opacity:
     background-image: url(../themes/img/arrow_refresh.png) !important;
 } .iconDelete {
     background-image: url(../themes/img/delete.png) !important;
+} .iconFolderOpen {
+    background-image: url(../themes/img/folder-open.gif) !important;
+} .iconFolderClose {
+    background-image: url(../themes/img/folder.gif) !important;
 } .iconTabNeedReviewed {
     background-image: url(../themes/img/page_edit.png) !important;
 } .iconTabError {
